# rust-practice

./: .gitignore  Cargo.toml  How to understand Rust's default thread safety.md  README.md
algorithms/hacker_rank/src/: flower_bouquets.rs
basics/: README.md
basics/01_hello/: README.md
basics/01_hello/src/: main.rs
basics/02_ownership/: README.md
basics/02_ownership/src/: main.rs
basics/03_generics/: Cargo.toml  README.md
basics/03_generics/src/: main.rs
basics/04_modules/: Cargo.toml  README.md
basics/04_modules/src/: main.rs  maps.rs  slices.rs  text.rs  vectors.rs
basics/05_error_handling/: README.md
basics/05_error_handling/src/: lib.rs  main.rs
basics/05_error_handling/tests/: integration_test.rs
basics/TODO/: control_flow.rs  error_handling.rs  generics_trait.rs  main.rs  time_intervals.rs  variable.rs
counter-contracts/: README.md
counter-contracts/dfinity/: Cargo.toml  README.md  dfx.json
counter-contracts/near/: Cargo.toml
counter-contracts/near/src/: lib.rs
counter-contracts/polkadot/counter/: Cargo.toml  lib.rs
ffi/: README.md
ffi/c-call-rust/: Cargo.toml  makefile
ffi/c-call-rust/c-src/: main  main.c
ffi/c-call-rust/src/: c_call_rust.h  lib.rs
ffi/example_01/: Cargo.toml  Makefile
ffi/example_01/csrc/: hello.c
ffi/example_01/src/: example_01.h  lib.rs
ffi/example_02/: Cargo.toml  Makefile
ffi/example_02/csrc/: main.c
ffi/example_02/src/: example_02.h  lib.rs
ffi/example_03/: Cargo.toml  Makefile  cbindgen.toml  example_03_header.h
ffi/example_03/csrc/: main.c
ffi/example_03/src/: example_03.h  lib.rs
ffi/example_04/: .gitignore  Cargo.toml  README.md
ffi/example_04/ffi/: Cargo.toml  cbindgen.toml  example_04_header.h
ffi/example_04/python/: main.py
ffi/example_04/src/: lib.rs
ffi/example_09/: .gitignore  Cargo.toml
ffi/example_09/csrc/: cfoo.c
ffi/example_09/src/: main.rs
ffi/example_10/: Cargo.toml
ffi/example_10/csrc/: compile.sh  sumsquare.c
ffi/example_10/src/: main.rs
ffi/ffi-secp256k1/: Cargo.toml  build.rs  wrapper.h
ffi/ffi-secp256k1/include/: test.c
ffi/nix/: Cargo.toml
ffi/nix/src/: main.c  main.rs
ffi/rust-call-c/: Cargo.toml
ffi/rust-call-c/src/: array.rs  layout.rs  main.rs  (+2 more)
ffi/secp256k1-sys/: Cargo.toml  build.rs
ffi/string/: print.c
hands-on/: README.md
hands-on/archlens/: .env.example  .gitignore  README.md  ai_classifier.py  archlens.db  database.py  ingest.py  prompts.json  pyproject.toml  run.sh  sources.json  streamlit_app.py  test_ai_classifier.py
hands-on/async-primer/: .gitignore  Cargo.toml  README.md
hands-on/hacker_rank/: Cargo.toml  README.md
hands-on/httpie-lite/: Cargo.toml  README.md
hands-on/httpie-lite/src/: main.rs
hands-on/merkle-tree/: Cargo.toml  README.md
hands-on/rust-codes-flow/: Cargo.toml  README.md
hands-on/rust-codes-flow/cli/: Cargo.toml
hands-on/rust-codes-flow/cli/src/: main.rs
hands-on/rust-codes-flow/core/: Cargo.toml
hands-on/rust-codes-flow/core/src/: extractor.rs  hashing.rs  lib.rs  models.rs  normalizer.rs
hands-on/std-box/: example_Deref.rs  example_TraitObject.rs
hands-on/tarpc/: Cargo.toml
head-first/: .gitignore  Cargo.toml  README.md
head-first/cli/: Cargo.toml
head-first/http/: Cargo.toml
head-first/http/src/: lib.rs  main.rs  rpc_client.rs  rpc_server.rs
head-first/merkle-tree/: README.md
head-first/rust-trait/: Cargo.toml
head-first/src/: clap_example.rs  main.rs
head-first/std-box/: example_Box.rs
head-first/std-cell/: example_Cell.rs  example_RefCell.rs
head-first/std-marker/: example_Send_Sync.rs
rust-trait/: Cargo.toml
rust-trait/src/: bound.rs
simple/: Cargo.toml  README.md
simple/httpie/: Cargo.toml
simple/src/: collections.rs  main.rs  primitives.rs  print.c  print.js  tcp_server_example.rs  time_intervals.rs  upper.c
simple/string/: print.js  woops.c
src/: collections.rs  control_flow.rs  function.rs  statement.rs  variable.rs
(+35 files in other folders)
