[package]
name = "example_02"
version = "0.1.0"
authors = ["lesterli <lester123@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[lib]
name = "example_02"
crate-type = ["staticlib", "cdylib"]