[workspace]
members = [
    "core",
    "cli"
]

resolver = "3"

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "visit-mut", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
walkdir = "2.4"
indicatif = { version = "0.17", features = ["rayon"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
