[package]
name = "http"
version = "0.1.0"
authors = ["lesterli <lester123@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-http-server = "14.0.3"