[package]
name = "http"
version = "0.1.0"
authors = ["lesterli <lester123@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
html2md = "0.2"

futures = "0.1.26"
hyper = { version = "0.12", optional = true }

jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-http-server = "14.0.3"
jsonrpc-client-transports = "14.0.3"
jsonrpc-derive = "14.0.3"