[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI tool for converting Rust repositories to JSONL datasets for AI training"

[dependencies]
core = { path = "../core" }
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
walkdir = "2.4"
indicatif = "0.17"
anyhow = "1.0"
serde_json = "1.0"
num_cpus = "1.16"

[[bin]]
name = "rustcodesflow"
path = "src/main.rs"
